# copier-templates

./: .gitignore  README.md
copier_code_template/: .copier-tasks.py  copier.yml
copier_code_template/template/: .copier-answers.yml  .readthedocs.yaml  README.md  architecture.md  environment.yaml  mkdocs.yml  pyproject.toml
copier_code_template/template/.github/workflows/: publish.yml
copier_code_template/template/docs/: api.md  index.md  installation.md  usage.md
copier_code_template/template/docs/explanation/: index.md
copier_code_template/template/docs/how-to/: index.md
copier_code_template/template/docs/reference/: index.md
copier_code_template/template/docs/tutorials/: getting-started.md  index.md
copier_code_template/template/src/[[package_name]]/: __init__.py
copier_paper_template/: copier.yml
copier_paper_template/template/: .gitignore  README.md  main.tex  references.bib
